--- a/templates/default/ipf.conf.erb
+++ b/templates/default/ipf.conf.erb
@@ -1,14 +1,64 @@
-## This file is written by Chef.  Do not edit by hand.
+## This file is written by Chef in #{__FILE__}, line #{__LINE__}. Do not edit by hand.
 ## These should be pretty sane defaults for public cloud
 ## hosts.
 
-# inbound traffic - ssh
-pass in quick from any to any port=22
+# block traffic in from specified ips/ranges
+<% unless @blocked_in.blank? %>
+  <% @blocked_in.each do |ip| -%>
+    block in quick log from <%= ip %> to any
+  <% end =%>
+<% end %>
 
-# inbound traffic - http(s)
-pass in quick from any to any port=80
-pass in quick from any to any port=443
+# block traffic out to specified ips/ranges
+<% unless @blocked_in.blank? %>
+  <% @blocked_in.each do |ip| -%>
+    block out quick log from any to <%= ip %>
+  <% end =%>
+<% end %>
 
+# block traffic in on specified ports
+<% unless @ports_in.blank? %>
+  <% @ports_in.each do |port| -%>
+    block in quick log from any to any port=<%= port %>
+  <% end =%>
+<% end %>
+
+# block traffic out on specified ports
+<% unless @ports_out.blank? %>
+  <% @ports_out.each do |port| -%>
+    block out quick log from any to any port=<%= port %>
+  <% end =%>
+<% end %>
+
+# pass traffic in from specified ips/ranges
+<% unless @pass_in.blank? %>
+  <% @pass_in.each do |ip| -%>
+    pass in quick from <%= ip %> to any keep state
+  <% end =%>
+<% end %>
+
+# pass traffic out to specified ips/ranges
+<% unless @pass_out.blank? %>
+  <% @pass_out.each do |ip| -%>
+    pass out quick from any to <%= ip %> keep state
+  <% end =%>
+<% end %>
+
+# pass traffic in on specified ports
+<% unless @ports_in.blank? %>
+  <% @ports_in.each do |port| -%>
+    pass in quick from any to any port=<%= port %> keep state
+  <% end =%>
+<% end %>
+
+# pass traffic out on specified ports
+<% unless @ports_out.blank? %>
+  <% @ports_out.each do |port| -%>
+    pass out quick from any to any port=<%= port %> keep state
+  <% end =%>
+<% end %>
+
+# the default mode is turtle
 # pass outgoing traffic
 pass out quick from any to any keep state
 
