--- a/templates/default/ipf.conf.erb
+++ b/templates/default/ipf.conf.erb
@@ -1,5 +1,12 @@
 ## This file is written by Chef.  Do not edit by hand.
 
+<% unless @pass_icmp.nil? %>
+# pass icmp in from any or ips/ranges
+  <% @pass_icmp.split.each do |rule| -%>
+pass in quick proto icmp from <%= rule %> to any keep state
+  <% end =%>
+<% end %>
+
 <% unless @block_in.nil? %>
 # block traffic in from specified ips/ranges
   <% @block_in.split.each do |ip| -%>
@@ -50,7 +57,7 @@ pass in quick from any to any port=<%= port %> keep state
 <% end %>
 
 <% unless @ports_pass_in_by_ip.nil? %>
-# pass traffic in on specified ports
+# pass traffic in on specified ports by ips/ranges
   <% @ports_pass_in_by_ip.split.each do |ip_port| -%>
 pass in quick from <%= ip_port.split(",")[1] %> to any port=<%= ip_port.split(",")[0] %> keep state
   <% end =%>
