--- a/templates/default/ipf.conf.erb
+++ b/templates/default/ipf.conf.erb
@@ -1,71 +1,71 @@
 ## This file is written by Chef.  Do not edit by hand.
 
-<% unless @pass_icmp.nil? %>
+<% unless @pass_icmp.empty? %>
 # pass icmp in from any or ips/ranges
-  <% @pass_icmp.split.each do |rule| -%>
+  <% @pass_icmp.each do |rule| -%>
 pass in quick proto icmp from <%= rule %> to any keep state
   <% end =%>
 <% end %>
 
-<% unless @block_in.nil? %>
+<% unless @block_in.empty? %>
 # block traffic in from specified ips/ranges
-  <% @block_in.split.each do |ip| -%>
+  <% @block_in.each do |ip| -%>
 block in quick log from <%= ip %> to any
   <% end =%>
 <% end %>
 
-<% unless @block_in.nil? %>
+<% unless @block_in.empty? %>
 # block traffic out to specified ips/ranges
-  <% @block_in.split.each do |ip| -%>
+  <% @block_in.each do |ip| -%>
 block out quick log from any to <%= ip %>
   <% end =%>
 <% end %>
 
-<% unless @ports_block_in.nil? %>
+<% unless @ports_block_in.empty? %>
 # block traffic in on specified ports
-  <% @ports_block_in.split.each do |port| -%>
+  <% @ports_block_in.each do |port| -%>
 block in quick log from any to any port=<%= port %>
   <% end =%>
 <% end %>
 
-<% unless @ports_block_out.nil? %>
+<% unless @ports_block_out.empty? %>
 # block traffic out on specified ports
-  <% @ports_block_out.split.each do |port| -%>
+  <% @ports_block_out.each do |port| -%>
 block out quick log from any to any port=<%= port %>
   <% end =%>
 <% end %>
 
-<% unless @pass_in.nil? %>
+<% unless @pass_in.empty? %>
 # pass traffic in from specified ips/ranges
-  <% @pass_in.split.each do |ip| -%>
+  <% @pass_in.each do |ip| -%>
 pass in quick from <%= ip %> to any keep state
   <% end =%>
 <% end %>
 
-<% unless @pass_out.nil? %>
+<% unless @pass_out.empty? %>
 # pass traffic out to specified ips/ranges
-  <% @pass_out.split.each do |ip| -%>
+  <% @pass_out.each do |ip| -%>
 pass out quick from any to <%= ip %> keep state
   <% end =%>
 <% end %>
 
-<% unless @ports_pass_in.nil? %>
+<% unless @ports_pass_in.empty? %>
 # pass traffic in on specified ports
-  <% @ports_pass_in.split.each do |port| -%>
+  <% @ports_pass_in.each do |port| -%>
 pass in quick from any to any port=<%= port %> keep state
   <% end =%>
 <% end %>
 
-<% unless @ports_pass_in_by_ip.nil? %>
+<% unless @ports_pass_in_by_ip.empty? %>
 # pass traffic in on specified ports by ips/ranges
-  <% @ports_pass_in_by_ip.split.each do |ip_port| -%>
+  <% @ports_pass_in_by_ip.each do |ip_port| -%>
 pass in quick from <%= ip_port.split(",")[1] %> to any port=<%= ip_port.split(",")[0] %> keep state
   <% end =%>
 <% end %>
 
-<% unless @ports_pass_out.nil? %>
+<% unless @ports_pass_out.empty? %>
 # pass traffic out on specified ports
-  <% @ports_pass_out.split.each do |port| -%>
+  <% @ports_pass_out.each do |port| -%>
 pass out quick from any to any port=<%= port %> keep state
   <% end =%>
 <% end %>
