Even more cleanups now that I've actually read the thing.

--- a/templates/default/ipf.conf.erb
+++ b/templates/default/ipf.conf.erb
@@ -1,4 +1,5 @@
 ## This file is written by Chef.  Do not edit by hand.
+## Dropped off around <%= Time.now %>
 
 <% unless @pass_icmp.empty? %>
 # pass icmp in from any or ips/ranges
